--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
   },
   "dependencies": {
     "gsap": "^2.0.1",
-    "mini-store": "^1.1.0",
     "normalize.css": "^8.0.0",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "reselect": "^3.0.1"
   }
 }
